@@ -93,7 +93,7 @@ export const BASE_ACCELERATION = 60;
 export const BASE_THREAT = 150;
 export const MIN_THREAT = 100;
 export const UTILITY_MOD_DECREASE = 0.96;
-export const BASE_CARGO = 1;
+export const BASE_CARGO = 2;
 export const BASE_ADAPTIVE_PRECISION = 200;
 export const BASE_PRECISION = 300;
 
