@@ -3,6 +3,7 @@
 -   Increased components prices of drones
 -   Increase components gain from Enemies
 -   New research "Assimilation"; +100% Components from enemies, repeatable
+-   Cargo and Assistance Drone buff
 -   Fixed spells not auto casting
 
 23/08/2020
